Correcting version, right align badging

--- a/www.html5rocks.com/static/css/index_page.css
+++ b/www.html5rocks.com/static/css/index_page.css
@@ -183,7 +183,7 @@
   color: #000;
 }
 #latest_articles_feed li a {
-  max-width: 73%;
+  width: 73%;
   display: inline-block;
   overflow: hidden;
   text-overflow: ellipsis;
